--- a/Frontend/app/globals.css
+++ b/Frontend/app/globals.css
@@ -1,72 +1,279 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+:root {
+  --background: #1B1D29;
+  --foreground: #ededed;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--foreground);
+  background: var(--background);
+  font-family: "Nabla", Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Nabla";
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+.page {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+/* HEADER STYLES */
+
+header {
+  grid-column: 2 / 12;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 2em 0;
+}
+
+header .brand {
+  font-family: "Nabla";
+  font-size: 2rem;
+  transform: rotate(-5deg);
+}
+
+/* BUTTON STYLES */
+
+.btn--fancy,
+input[type="submit"] {
+  font-family: "Nabla";
+  font-size: 1.5rem;
+
+  background: transparent;
+  border: none;
+
+  cursor: pointer;
+
+  transition: 250ms ease all;
+}
+
+header .btn--fancy {
+  transform: rotate(5deg);
+}
+
+main .create .btn--fancy {
+  font-size: 2rem;
+}
+
+.btn--fancy:hover,
+input[type="submit"]:hover {
+  transform: scale(1.2);
+}
+
+/* MAIN LAYOUT */
+
+main {
+  grid-column: 2 / 12;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+
+  text-align: center;
+}
+
+main .create {
+  grid-column: 1 / 13;
+  place-content: center;
+  min-height: 30svh;
+}
+
+/* DISPLAY TOKEN LISTINGS */
+
+main .listings {
+  grid-column: 1 / 13;
+}
+
+main .listings h1 {
+  font-family: "Arial";
+  font-weight: 800;
+  padding: 1em;
+}
+
+.tokens {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 0));
+  gap: 1em;
+  place-content: center;
+  text-align: center;
+}
+
+.tokens p {
+  grid-column: 1 / -1;
+  font-family: "Arial";
+  font-size: 1.50rem;
+}
+
+.token {
+  background: none;
+  border: 1px solid transparent;
+  color: var(--foreground);
+  padding: 1em;
+
+  font-size: 1.05rem;
+
+  cursor: pointer;
+}
+
+.token:nth-child(1) {
+  animation: blink forwards 5s ease infinite;
+}
+
+.token:hover {
+  border: 1px solid var(--foreground);
+}
+
+@keyframes blink {
+  0% {
+    background: yellow;
+    opacity: 0;
   }
-  .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+
+  5% {
+    background: none;
+    opacity: 1;
+  }
+
+  95% {
+    background: none;
+    opacity: 1;
+  }
+
+  100% {
+    background: yellow;
+    opacity: 0;
   }
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+.token__details {
+  font-family: "Arial";
+  font-weight: 400;
+  text-align: center;
+}
+
+.token__details p {
+  font-size: 0.95rem;
+  text-transform: lowercase;
+  padding: 0.5em;
+  width: 100%;
+}
+
+.token__details .name {
+  font-size: 1.40rem;
+}
+
+/* CREATE TOKEN FORM */
+
+.list {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 3em;
+}
+
+.list__description {
+  font-family: "Arial";
+  font-size: 1.10rem;
+  font-weight: 400;
+  text-transform: lowercase;
+  padding: 1em 0 0;
+}
+
+.list form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2em;
+  padding: 2em;
+}
+
+.list form input[type="text"] {
+  background-color: var(--background);
+  color: var(--foreground);
+  border: none;
+
+  width: 200px;
+  padding: 1.50em;
+  border-radius: 6px;
+}
+
+/* TRADE TOKENS */
+.trade {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 3em;
+}
+
+.trade p {
+  font-family: "Arial";
+  font-size: 1.10rem;
+  text-transform: lowercase;
+}
+
+.trade .disclaimer {
+  font-size: 1.50rem;
+  font-weight: bold;
+  padding: 2em;
+}
+
+.trade form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2em;
+  padding: 2em;
+}
+
+.trade form input[type="number"] {
+  background-color: var(--background);
+  color: var(--foreground);
+  border: none;
+
+  width: 200px;
+  padding: 1.50em;
+  border-radius: 6px;
 }
