--- a/Frontend/app/globals.css
+++ b/Frontend/app/globals.css
@@ -182,6 +182,7 @@ main .listings h1 {
   text-transform: lowercase;
   padding: 0.5em;
   width: 100%;
+  color: aqua;
 }
 
 .token__details .name {
